--- a/mo3adala-handasa/src/app/pages/blog/blog.page.html
+++ b/mo3adala-handasa/src/app/pages/blog/blog.page.html
@@ -8,7 +8,7 @@
 		</article>
 	</ng-container>
 	<ng-template #empty>
-		<p class="text-slate-600">لا توجد مقالات بعد.</p>
+		<p class="text-slate-600">لا توجد مقالات اخري.</p>
 	</ng-template>
 </section>
 
