--- a/mo3adala-handasa/src/app/app.component.html
+++ b/mo3adala-handasa/src/app/app.component.html
@@ -1,5 +1,8 @@
+<app-loading></app-loading>
 <app-navbar></app-navbar>
-<main class="min-h-dvh">
-	<router-outlet />
+<main class="min-h-dvh relative overflow-hidden">
+	<div [@pageTransition]="getRouteAnimationState()">
+		<router-outlet />
+	</div>
 </main>
 <app-footer></app-footer>
